--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -28,10 +28,10 @@ under the License.
   <head>
     <link rel="icon" href=https://data-product-business.github.io/open-data-product-spec/images/favicon-bc890431.png"/>
     <meta charset="utf-8">
-    <meta property="og:title" content="Open Data Product Specification 2.0" />
-    <meta property="og:url" content="https://data-product-business.github.io/open-data-product-spec/" />
+    <meta property="og:title" content="Open Data Product Specification 2.1" />
+    <meta property="og:url" content="https://open-data-product-initiative.github.io/open-data-product-spec-2.1/"/>
     <meta property=”og:type” content=”website” />
-    <meta property="og:image" content="https://opendataproducts.org/images/logo-dps-new-4bb33ca5.png" />
+    <meta property="og:image" content="https://camo.githubusercontent.com/899d761afc97f791f9b3b5950427cdeb5c1e087d0b90af249e6be9a4c1119973/68747470733a2f2f6f70656e6461746170726f64756374732e6f72672f696d672f70726f66696c652e706e67" />
     <meta property="og:description" 
     content="The Open Data Product Specification is a vendor-neutral, open-source machine-readable data product metadata model. It defines the objects and attributes as well as the structure of digital data products." />
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
@@ -45,7 +45,7 @@ under the License.
         >
       <% end %>
     <% end %>
-    <title><%= current_page.data.title || "Open Data Product Specification 2.0" %></title>
+    <title><%= current_page.data.title || "Open Data Product Specification 2.1" %></title>
 
     <style media="screen">
       <%= Rouge::Themes::MonokaiSublimeSlate.render(:scope => '.highlight') %>
