--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -26,7 +26,7 @@ under the License.
 <!doctype html>
 <html>
   <head>
-    <link rel="icon" href=https://data-product-business.github.io/open-data-product-spec/images/favicon-bc890431.png"/>
+    <link rel="icon" href="https://data-product-business.github.io/open-data-product-spec/images/favicon-bc890431.png"/>
     <meta charset="utf-8">
     <meta property="og:title" content="Open Data Product Specification 2.1" />
     <meta property="og:url" content="https://open-data-product-initiative.github.io/open-data-product-spec-2.1/"/>
