--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -26,10 +26,10 @@ under the License.
 <!doctype html>
 <html>
   <head>
-    <link rel="icon" href=https://data-product-business.github.io/open-data-product-spec/images/favicon-bc890431.png"/>
+    <link rel="icon" href="https://data-product-business.github.io/open-data-product-spec/images/favicon-bc890431.png"/>
     <meta charset="utf-8">
-    <meta property="og:title" content="Open Data Product Specification 2.0" />
-    <meta property="og:url" content="https://data-product-business.github.io/open-data-product-spec/" />
+    <meta property="og:title" content="Open Data Product Specification Development Version" />
+    <meta property="og:url" content="https://open-data-product-initiative.github.io/open-data-product-spec-dev/" />
     <meta property=”og:type” content=”website” />
     <meta property="og:image" content="https://opendataproducts.org/images/logo-dps-new-4bb33ca5.png" />
     <meta property="og:description" 
@@ -45,7 +45,7 @@ under the License.
         >
       <% end %>
     <% end %>
-    <title><%= current_page.data.title || "Open Data Product Specification 2.0" %></title>
+    <title><%= current_page.data.title || "Open Data Product Specification Development Version" %></title>
 
     <style media="screen">
       <%= Rouge::Themes::MonokaiSublimeSlate.render(:scope => '.highlight') %>
