--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -359,7 +359,8 @@ html, body {
     margin-top: 2em;
     border-top: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
-    background-color: #fdfdfd;
+    background-color: #f60;
+    margin-right: 1px;
   }
 
   h1:first-child, div:first-child + h1 {
@@ -371,11 +372,13 @@ html, body {
     @extend %header-font;
     font-size: 19px;
     margin-top: 4em;
-    margin-bottom: 0;
+    margin-bottom: 20px;
     border-top: 1px solid #ccc;
     padding-top: 1.2em;
     padding-bottom: 1.2em;
-    background-image: linear-gradient(to bottom, rgba(#fff, 0.2), rgba(#fff, 0));
+    background-color:#eee;
+    margin-right: 1px;
+
   }
 
   // h2s right after h1s should bump right up
