--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -611,7 +611,7 @@ html, body {
   }
 
   .toc-wrapper .lang-selector {
-    display: block;
+    visibility: hidden;
   }
 
   .page-wrapper .lang-selector {
