--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -29,7 +29,7 @@ under the License.
     <link rel="icon" href="https://data-product-business.github.io/open-data-product-spec/images/favicon-bc890431.png"/>
     <meta charset="utf-8">
     <meta property="og:title" content="Open Data Product Specification Development Version" />
-    <meta property="og:url" content="https://open-data-product-initiative.github.io/open-data-product-spec-dev/" />
+    <meta property="og:url" content="https://opendataproducts.org/dev/" />
     <meta property=”og:type” content=”website” />
     <meta property="og:image" content="https://camo.githubusercontent.com/899d761afc97f791f9b3b5950427cdeb5c1e087d0b90af249e6be9a4c1119973/68747470733a2f2f6f70656e6461746170726f64756374732e6f72672f696d672f70726f66696c652e706e67" />
     <meta property="og:description" 
@@ -92,7 +92,7 @@ under the License.
       </span>
     </a>
     <div class="toc-wrapper">
-      <%= image_tag "logo-dps-new.png", class: 'logo' %>
+      <%= image_tag "logo-dps-2024.png", class: 'logo' %>
       <% if language_tabs.any? %>
         <div class="lang-selector">
           <% language_tabs.each do |lang| %>
