--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -358,9 +358,9 @@ html, body {
     padding-bottom: 0.5em;
     margin-bottom: $h1-margin-bottom;
     margin-top: 2em;
-    border-top: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
-    background-color: #f60;
+    border-top: 1px solid #FCB601;
+    border-bottom: 1px solid #FCB601;
+    background-color: #5F1C87;
     margin-right: 1px;
   }
 
