--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -361,6 +361,7 @@ html, body {
     border-top: 1px solid #FCB601;
     border-bottom: 1px solid #FCB601;
     background-color: #5F1C87;
+    color:#eee;
     margin-right: 1px;
   }
 
