--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -375,10 +375,10 @@ html, body {
     font-size: 19px;
     margin-top: 4em;
     margin-bottom: 20px;
-    border-top: 1px solid #ccc;
+    border-top: 0px solid #ccc;
     padding-top: 1.2em;
     padding-bottom: 1.2em;
-    background-color:#eee;
+    background-color: transparent;
     margin-right: 1px;
 
   }
