--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -378,7 +378,7 @@ html, body {
     border-top: 0px solid #ccc;
     padding-top: 1.2em;
     padding-bottom: 1.2em;
-    background-color: transparent
+    background-color: transparent;
     margin-right: 1px;
 
   }
