--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -153,7 +153,7 @@ html, body {
 
   // This is the currently selected ToC entry 
   .toc-link.active {
-    background-color: #828282;
+    background-color: #a3a3a3;
     color: #000;
   }
 
