--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -379,7 +379,7 @@ html, body {
     padding-top: 1.2em;
     padding-bottom: 1.2em;
     background-color: transparent;
-    margin-right: 1px;
+    // margin-right: 1px;
 
   }
 
