--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -268,7 +268,7 @@ html, body {
   
   .dark-box {
     width: $examples-width;
-    background-color: #5f1c87;
+    background-color: #2E3336;
     position: absolute;
     right: 0;
     top: 0;
