--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -24,14 +24,14 @@ under the License.
 // BACKGROUND COLORS
 ////////////////////
 $nav-bg: #fff !default;
-$examples-bg: #2E3336 !default;
+$examples-bg: #230336 !default;
 $code-bg: #31064b !default;
 $code-annotation-bg: #31064b !default;
 $nav-subitem-bg: #fff !default;
 $nav-active-bg: #d3d3d3 !default;
 $nav-active-parent-bg: #fff !default; // parent links of the current section
-$lang-select-border: #2E3336 !default;
-$lang-select-bg: #2E3336 !default;
+$lang-select-border: #230336 !default;
+$lang-select-bg: #230336 !default;
 $lang-select-active-bg: $examples-bg !default; // feel free to change this to blue or something
 $lang-select-pressed-bg: #2E3336 !default; // color of language tab bg when mouse is pressed
 $main-bg: #F3F7F9 !default;
