--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -360,7 +360,7 @@ html, body {
     margin-top: 2em;
     border-top: 0px solid #FCB601;
     border-bottom: 0px solid #FCB601;
-    background-color: #144378; // #5F1C87
+    background-color: #fff; // #5F1C87
     color:#eee;
   }
 
