--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -359,9 +359,9 @@ html, body {
     margin-bottom: $h1-margin-bottom;
     margin-top: 2em;
     border-top: 0px solid #FCB601;
-    border-bottom: 0px solid #FCB601;
+    border-bottom: 0px solid #fff;
     background-color: #fff; // #5F1C87
-    color:#eee;
+    color:#230336;
   }
 
   h1:first-child, div:first-child + h1 {
