--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -153,8 +153,8 @@ html, body {
 
   // This is the currently selected ToC entry 
   .toc-link.active {
-    background-color: #a3a3a3;
-    color: #000;
+    background-color: #230336;
+    color: #fff;
   }
 
   // this is parent links of the currently selected ToC entry
