--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -28,8 +28,8 @@ under the License.
   <head>
     <link rel="icon" href="https://data-product-business.github.io/open-data-product-spec/images/favicon-bc890431.png"/>
     <meta charset="utf-8">
-    <meta property="og:title" content="Open Data Product Specification 4.0 - Release Version" />
-    <meta property="og:url" content="https://opendataproducts.org/v4.0/" />
+    <meta property="og:title" content="Open Data Product Specification - Development Version" />
+    <meta property="og:url" content="https://opendataproducts.org/dev" />
     <meta property=”og:type” content=”website” />
     <meta property="og:image" content="https://opendataproducts.org/images/social.png" />
     <meta property="og:description" 
