--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -79,7 +79,7 @@ under the License.
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-8NN2RZ765V');
+      gtag('config', 'G-2BRS2DSVKQ');
     </script>
 
   </head>
