--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -28,8 +28,8 @@ under the License.
   <head>
     <link rel="icon" href="https://data-product-business.github.io/open-data-product-spec/images/favicon-bc890431.png"/>
     <meta charset="utf-8">
-    <meta property="og:title" content="Open Data Product Specification - Release Candidate" />
-    <meta property="og:url" content="https://opendataproducts.org/v4.1rc" />
+    <meta property="og:title" content="Open Data Product Specification - Version 4.1" />
+    <meta property="og:url" content="https://opendataproducts.org/v4.1" />
     <meta property=”og:type” content=”website” />
     <meta property="og:image" content="https://opendataproducts.org/images/social.png" />
     <meta property="og:description" 
@@ -46,7 +46,7 @@ under the License.
       <% end %>
     <% end %>
 
-    <title><%= current_page.data.title || "Open Data Product Specification Release Candidate Version" %></title>
+    <title><%= current_page.data.title || "Open Data Product Specification Release Version 4.1" %></title>
 
 
     <style media="screen">
